sw/CppunitTest_sw_rtfimport.mk
@@ -75,6 +75,7 @@ $(eval $(call gb_CppunitTest_use_components,sw_rtfimport,\
     unotools/util/utl \
     unoxml/source/service/unoxml \
 	writerfilter/util/writerfilter \
+    xmloff/util/xo \
 ))
 
 $(eval $(call gb_CppunitTest_use_configuration,sw_rtfimport))
