sw/qa/extras/rtfimport/rtfimport.cxx
@@ -165,6 +165,7 @@ public:
     void testGroupshapeRotation();
     void testFdo44715();
     void testFdo68076();
+    void testFdo68291();
 
     CPPUNIT_TEST_SUITE(Test);
 #if !defined(MACOSX) && !defined(WNT)
@@ -315,6 +316,7 @@ void Test::run()
         {"groupshape-rotation.rtf", &Test::testGroupshapeRotation},
         {"fdo44715.rtf", &Test::testFdo44715},
         {"fdo68076.rtf", &Test::testFdo68076},
+        {"fdo68291.odt", &Test::testFdo68291},
     };
     header();
     for (unsigned int i = 0; i < SAL_N_ELEMENTS(aMethods); ++i)
@@ -1510,6 +1512,17 @@ void Test::testFdo68076()
     // Encoding of the last char was wrong (more 'o' than 'y').
     OUString aExpected("\xD0\x9E\xD0\xB1\xD1\x8A\xD0\xB5\xD0\xBA\xD1\x82 \xE2\x80\x93 \xD1\x83", 19, RTL_TEXTENCODING_UTF8);
     getParagraph(1, aExpected);
+}
+
+void Test::testFdo68291()
+{
+    uno::Reference<text::XTextDocument> xTextDocument(mxComponent, uno::UNO_QUERY);
+    uno::Reference<text::XTextRange> xText(xTextDocument->getText(), uno::UNO_QUERY);
+    uno::Reference<text::XTextRange> xEnd = xText->getEnd();
+    paste("fdo68291-paste.rtf", xEnd);
+
+    // This was "Standard", causing an unwanted page break on next paste.
+    CPPUNIT_ASSERT_EQUAL(OUString(), getProperty<OUString>(getParagraph(1), "PageDescName"));
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Test);
